--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     </head>
     <body>
         <div class="card">
-            <img class="avatar" src="images/reddy.png">
+            <img class="avatar" src="images/reddy.png" alt="picture of reddy smiling at the camera and posing">
             <div >
                 <p>Frontend Developer<p>
                 <h3>Reddy</h3>
                 <p>Redproto@gmail.com</p>
                 <div class="social">
-                    <img class="twitter do-it" src="images/twitter.png">
+                    <img class="twitter do-it" src="images/twitter.png" alt="logo of twitter application in black colour">
                     <p class="do-it">reddy3034</p>
-                    <img class="insta do-it" src="images/insta.png">
+                    <img class="insta do-it" src="images/insta.png" alt="logo of instagram application in black colour">
                     <p class="do-it">reddy3034</p>
                 </div>
                 <p>www.reddyfronend.com</p>
